secrets/infisical/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infisical
  labels:
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: infisical
    app.kubernetes.io/component: infisical
    app.kubernetes.io/app: infisical-standalone
  namespace: nukleros-secrets-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: infisical
      app.kubernetes.io/app: infisical-standalone
      app.kubernetes.io/release: infisical
  template:
    metadata:
      labels:
        platform.nukleros.io/category: secrets
        platform.nukleros.io/project: infisical
        app.kubernetes.io/component: infisical
        app.kubernetes.io/app: infisical-standalone
        app.kubernetes.io/release: infisical
    spec:
      serviceAccountName: infisical
      securityContext:
        fsGroup: 1001
      containers:
        - name: infisical-standalone-infisical
          image: infisical/infisical:v0.162.19
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          readinessProbe:
            httpGet:
              path: /api/status
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 1000Mi
              cpu: 350m
            requests:
              cpu: 350m
              memory: 1000Mi
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/component: infisical
                    app.kubernetes.io/app: infisical-standalone
                    app.kubernetes.io/release: infisical
      nodeSelector:
        kubernetes.io/os: linux
