secrets/infisical/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-hl
  namespace: nukleros-secrets-system
  labels:
    app.kubernetes.io/instance: infisical
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.2.0
    app.kubernetes.io/component: primary
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: infisical
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/instance: infisical
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: nukleros-secrets-system
  labels:
    app.kubernetes.io/instance: infisical
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.2.0
    app.kubernetes.io/component: primary
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: infisical
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/instance: infisical
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/component: primary
---
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  namespace: nukleros-secrets-system
  labels:
    app.kubernetes.io/instance: infisical
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.2.4
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: infisical
  annotations:
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
  selector:
    app.kubernetes.io/instance: infisical
    app.kubernetes.io/name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: nukleros-secrets-system
  labels:
    app.kubernetes.io/instance: infisical
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.2.4
    app.kubernetes.io/component: master
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: infisical
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
    - name: tcp-redis
      port: 6379
      targetPort: redis
      nodePort: null
  selector:
    app.kubernetes.io/instance: infisical
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: master
---
apiVersion: v1
kind: Service
metadata:
  name: infisical
  labels:
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: infisical
    app.kubernetes.io/component: infisical
    app.kubernetes.io/app: infisical-standalone
  namespace: nukleros-secrets-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: infisical
    app.kubernetes.io/app: infisical-standalone
    app.kubernetes.io/release: infisical
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
