secrets/infisical/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infisical-ingress
  labels:
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: infisical
  namespace: nukleros-secrets-system
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infisical
                port:
                  number: 8080
          - path: /ss-webhook
            pathType: Exact
            backend:
              service:
                name: infisical
                port:
                  number: 8080
      host: secrets.example.com
