secrets/infisical/networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: postgresql
  namespace: nukleros-secrets-system
  labels:
    app.kubernetes.io/instance: infisical
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 16.2.0
    app.kubernetes.io/component: primary
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: infisical
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: infisical
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  policyTypes:
    - Ingress
    - Egress
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - ports:
        - port: 5432
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: infisical
              app.kubernetes.io/name: postgresql
              app.kubernetes.io/component: read
  ingress:
    - ports:
        - port: 5432
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: redis
  namespace: nukleros-secrets-system
  labels:
    app.kubernetes.io/instance: infisical
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: 7.2.4
    platform.nukleros.io/category: secrets
    platform.nukleros.io/project: infisical
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: infisical
      app.kubernetes.io/name: redis
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 6379
